--- a/Makefile.darwin-x86-64
+++ b/Makefile.darwin-x86-64
@@ -1,4 +1,5 @@
 LIBNAME=$(OUTDIR)/libavbin.$(AVBIN_VERSION).dylib
+DARWIN_VERSION=$(shell uname -r | cut -d . -f 1)
 
 CFLAGS += -O3 -arch x86_64
 LDFLAGS += -dylib \
@@ -15,7 +16,7 @@ LIBS = -lSystem \
        -lz \
        -lbz2 \
        /usr/lib/dylib1.o \
-       -L/usr/lib/gcc/i686-apple-darwin9/4.2.1/x86_64/ -lgcc
+       -L/usr/lib/gcc/i686-apple-darwin$(DARWIN_VERSION)/4.2.1/x86_64/ -lgcc
 
 $(LIBNAME) : $(OBJNAME) $(OUTDIR)
 	$(LD) $(LDFLAGS) -o $@ $< $(STATIC_LIBS) $(LIBS)
